--- a/MyHome/app/src/main/res/values-hdpi/dimens.xml
+++ b/MyHome/app/src/main/res/values-hdpi/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="scalable_18">18sp</dimen>
     <dimen name="scalable_20">20sp</dimen>
     <dimen name="scalable_22">22sp</dimen>
+    <dimen name="scalable_32">32sp</dimen>
 </resources>
