--- a/MyHome/app/src/main/res/values/styles.xml
+++ b/MyHome/app/src/main/res/values/styles.xml
@@ -173,10 +173,13 @@
     <style name="tradeGothicLTStd_Dynamic22" parent="tradeGothicLTStdLight">
         <item name="android:textSize">@dimen/scalable_22</item>
     </style>
+    <style name="tradeGothicLTStd_Dynamic32" parent="tradeGothicLTStdBold">
+        <item name="android:textSize">@dimen/scalable_32</item>
+        <item name="android:textColor">@color/md_blue_grey_650</item>
+    </style>
     <style name="tradeGothicLTStd_Dynamic34" parent="tradeGothicLTStdBold">
         <item name="android:textSize">@dimen/scalable_34</item>
         <item name="android:textColor">@color/md_blue_grey_650</item>
-
     </style>
 
     <style name="tradeGothicLTStdBd2_20_deepAqua" parent="tradeGothicLTStdBd2">
